# SM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Utils/: CMakeLists.txt  NNGReq.h  Structs.h  Utils.cpp  Utils.h
conf/: conf.toml  dbCommon.h  dbCommon.sql  dbTest.db  dbTest.h  dbTest.sql  main.py
configs/: CMakeLists.txt  Configs.cpp  Configs.h  Routers.cpp  Routers.h  conf.cpp  conf.h
database/: CMakeLists.txt  CommonDBProcess.cpp  CommonDBProcess.h  DBConnectManager.cpp  DBConnectManager.h  DBConnectNNG.cpp  DBConnectNNG.h  DBConnectTCP.cpp  DBConnectTCP.h  DBManager.cpp  DBManager.h  DBNNg.cpp  DBNNg.h  DBTcp.cpp  DBTcp.h  DBs.cpp  DBs.h  DealAuth.cpp  DealAuth.h  DealEcho.cpp  DealEcho.h  NNGDatabaseReq.h  UserManager.cpp  UserManager.h  database.cpp  database.h
demo/: CMakeLists.txt  Source.cpp
hashlibrary/: CMakeLists.txt  crc32.cpp  crc32.h  digest.cpp  hash.h  keccak.cpp  keccak.h  md5.cpp  md5.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha3.cpp  sha3.h
hotupdate/: CMakeLists.txt  CoEvent.cpp  CoEvent.h  FileOp.cpp  FileOp.h  FilePathMonitor.cpp  FilePathMonitor.h  IOContextManager.cpp  IOContextManager.h  PathMonitorImpl.cpp  PathMonitorImpl.h  _fileOpAsync.cpp  _fileOpSync.cpp  hotupdate.cpp  hotupdate.h
inc/: Apps.h  HttpCmdTag.h  MainCmdTag.h  TransCmdTag.h  commUsing.h  consts.h  coros.h  enums.h  myconcept.h  oneshot.hpp  reqreps.h  subprocess.h  templatefuncs.h
inc/orm/: comm_db.h  comm_db.sql  ddl2cpp  demo.h  init_db.sql  main.py  rest.h  rest.sql  weixin.h
inc/os/: _darwinSpec.h  _linuxSpec.h  _winSpec.h  os.h
inc/os/Linux/export_flags/: UtilsExport.h  configsExport.h  databaseExport.h  hashlibraryExport.h  hotupdateExport.h  networkinterfaceExport.h
inc/os/Windows/export_flags/: UtilsExport.h  configsExport.h  databaseExport.h  hashlibraryExport.h  hotupdateExport.h  networkinterfaceExport.h
networkinterface/: AsynBase.h  AsynRep.cpp  AsynReq.cpp  CMakeLists.txt  ChannelBase.h  ChannelCombine.h  ChannelManager.h  ChannelsMgr.cpp  ChannelsMgr.h  FullDuplexChannel.cpp  FullDuplexChannel.h  FullDuplexChannelManager.h  Https.cpp  Https.h  LocalNetChannel.cpp  LocalNetChannel.h  LocalNetManager.cpp  LocalNetManager.h  MainAssPlatformDealer.cpp  MainAssPlatformDealer.h  MainPlatformDealer.cpp  MainPlatformDealer.h  ManageTcpChannel.h  MesageHandlerBase.cpp  MesageHandlerBase.h  MessageRouter.cpp  MessageRouter.h  MessageSplitFuncs.cpp  MessageSplitFuncs.h  NMessage.cpp  NMessage.h  NNGCommBase.h  NngServerBase.h  PackDealerBase.h  PackDealerCommon.cpp  PackDealerCommon.h  PackDealerMainSub.cpp  PackDealerMainSub.h  PackDealerNoHead.cpp  PackDealerNoHead.h  (+33 more)
networkinterface/dealers/: MainAssPlatPack.cpp  MainAssPlatPack.h  NoMainAssPlatPack.cpp  NoMainAssPlatPack.h
networkinterface/nngs/: AsynBase.h  AsynRep.h  AsynRepImpl.cpp  AsynRepImpl.h  AsynReq.cpp  AsynReq.h  AsynReqImpl.cpp  AsynReqImpl.h  NngReq.h  RepManager.h  ReqImpl.cpp  ReqImpl.h  ReqManager.h
networkinterface/socket/: TcpChannel.h  TcpChannelImpl.cpp  TcpClient.h  TcpClientCombine.h  TcpServerCombine.h  TcpStreamHandler.h
rayX/: CMakeLists.txt  rayx.cpp  rayx.h
rayX/ray/api/: ray_runtime.h
tests/: CMakeLists.txt
tests/asyncEvent/: CMakeLists.txt  Common.cpp
tests/asyncStreamtest/: CMakeLists.txt  Common.cpp
tests/asyncStreamtest/win/: winspec.cpp
tests/envcheck/: CMakeLists.txt  Common.cpp
tests/networktest/: CMakeLists.txt  Common.cpp
tests/networktest/win/: winspec.cpp
tests/rayXtest/: CMakeLists.txt  Common.cpp
tests/sqlppTest/: CMakeLists.txt  Common.cpp
uSockets2/: CMakeLists.txt
uSockets2/src/: quic.c  quic.h
whereami/: .gitignore  CMakeLists.txt
whereami/src/: whereami.h
